kubernetes-kurssi/2/2.1/manifests/deployment-log.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output-app
  template:
    metadata:
      labels:
        app: log-output-app
    spec:
      volumes: # Define volume
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: log-output-one
          image: anteropaivarinta/log-output-app-one:latest
          volumeMounts: # Mount volume
          - name: shared-image
            mountPath: /usr/src/app/files
        - name: log-output-two
          image: anteropaivarinta/log-output-app-two:latest
          volumeMounts: # Mount volume
          - name: shared-image
            mountPath: /usr/src/app/files
