kubernetes-kurssi/2/2.1/manifests/service-pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-app-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
